--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://raw.githubusercontent.com/malejacp4/malejacp4.github.io/master/Imagenes/Cafe%20Vietnam.PNG" style="width:100%" alt="Avatar">
+          <img src="https://raw.githubusercontent.com/malejacp4/malejacp4.github.io/master/Imagenes/artificial-intelligence-4389372_1920.jpg" style="width:100%" alt="Avatar">
           <div class="w3-container w3-text-black">
              <h2 style="font-size:2.5vw">María Alejandra Castillo</h2>
         	</div>
@@ -110,11 +110,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-deep-purple w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p>Redes Sociales.</p>
+   <a href="http://www.linkedin.com/in/maría-alejandra-castillo-pabón-6773677b" target="_blank" class="fa fa-linkedin w3-hover-opacity"style='font-size:28px'></a>
+  <a href="https://github.com/malejacp4" target="_blank" class="	fa fa-github w3-hover-opacity" style='font-size:28px'></a>
+  <a href="https://www.facebook.com/maria.castillopabon" target="_blank" class="fa fa-facebook-official w3-hover-opacity"style='font-size:28px'></a>
+  <p>Proyectos academicos: <a href="https://malejacp4.github.io/Visualizacion/" target="_blank">https://malejacp4.github.io/Visualizacion/</a></p>
 </footer>
-
-</body>
-</html>
